# YoutubeMixtapeAuto

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/services/: audio_service.py  meta_service.py  video_service.py
experiments/: exp.ipynb
frontend/: streamlit_app.py
