[project]
name = "ytautomate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.131.0",
    "ffmpeg-python>=0.2.0",
    "ipykernel>=7.2.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "pydub>=0.25.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "static-ffmpeg>=3.0",
    "streamlit>=1.54.0",
    "uvicorn[standard]>=0.41.0",
]
